Slóð á APA breytt úr kata í lexia

--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,2 @@
-_REACT_APP_API_ROOT=http://130.208.178.119:8800
-REACT_APP_API_ROOT=http://nidhoggur.rhi.hi.is/kata
+REACT_APP_API_ROOT=http://130.208.178.119:8000
+_REACT_APP_API_ROOT=http://nidhoggur.rhi.hi.is/lexia
