--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,2 @@
-REACT_APP_API_ROOT=http://130.208.108.18:8000
-_REACT_APP_API_ROOT=http://nidhoggur.rhi.hi.is/lexia
+_REACT_APP_API_ROOT=http://130.208.108.18:8000
+REACT_APP_API_ROOT=https://lexia.arnastofnun.is/django
